--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #000000e8;
   --primary-text: #ffffff;
-  --secondary: #ad73442c;
-  --secondary-text: #000000;
+  --secondary: #f0f0f0;
+  --secondary-text: #e76a04;
   --accent: #12b7e000;
   --accent-text: #fffefe;
   --accent-text2: #2b79ee;
